[package]
name = "lsystem"
version = "0.1.0"
edition = "2021"

[lib]
name = "lsystem"
path = "src/lib.rs"

[[example]]
name = "luigi"

[[example]]
name = "sierpinski"

[dependencies]
anyhow = "1.0.82"

[dev-dependencies]
rstest = "0.18.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 2 }
enum_glob_use = { level = "deny", priority = 1 }
